--- a/docs/configure/outputs/console.asciidoc
+++ b/docs/configure/outputs/console.asciidoc
@@ -28,7 +28,7 @@ output.console:
 
 ifdef::apm-server[]
 [float]
-=== Configure the {kib} output
+=== {kib} configuration
 
 include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
