--- a/docs/configure/outputs/logstash.asciidoc
+++ b/docs/configure/outputs/logstash.asciidoc
@@ -45,7 +45,7 @@ The `hosts` option specifies the {ls} server and the port (`5044`) where {ls} is
 
 ifdef::apm-server[]
 [float]
-=== Configure the {kib} output
+=== {kib} configuration
 
 include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
