--- a/docs/configure/instrumentation.asciidoc
+++ b/docs/configure/instrumentation.asciidoc
@@ -5,7 +5,11 @@
 <titleabbrev>Instrumentation</titleabbrev>
 ++++
 
-NOTE: Instrumentation of APM Server is not yet supported for Fleet-managed APM.
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+Instrumentation of APM Server is not yet supported for Fleet-managed APM.
+****
 
 APM Server uses the Elastic APM Go Agent to instrument its publishing pipeline.
 To gain insight into the performance of {beatname_uc}, you can enable this instrumentation and send trace data to APM Server.
@@ -56,38 +60,3 @@ If `api_key` is set then `secret_token` will be ignored.
 === `secret_token`
 
 {apm-guide-ref}/secret-token.html[Secret token] used to secure communication with the APM Server(s).
-
-[float]
-=== `profiling.cpu.enabled`
-
-Set to `true` to enable CPU profiling, where profile samples are recorded as events.
-
-This feature is experimental.
-
-[float]
-=== `profiling.cpu.interval`
-
-Configure the CPU profiling interval. Defaults to `60s`.
-
-This feature is experimental.
-
-[float]
-=== `profiling.cpu.duration`
-
-Configure the CPU profiling duration. Defaults to `10s`.
-
-This feature is experimental.
-
-[float]
-=== `profiling.heap.enabled`
-
-Set to `true` to enable heap profiling.
-
-This feature is experimental.
-
-[float]
-=== `profiling.heap.interval`
-
-Configure the heap profiling interval. Defaults to `60s`.
-
-This feature is experimental.
