--- a/docs/configure/outputs/kafka.asciidoc
+++ b/docs/configure/outputs/kafka.asciidoc
@@ -5,6 +5,12 @@
 <titleabbrev>Kafka</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+The Kafka output is not yet supported by {fleet}-managed APM Server.
+****
+
 The Kafka output sends events to Apache Kafka.
 
 To use this output, edit the {beatname_uc} configuration file to disable the {es}
@@ -33,7 +39,7 @@ NOTE: Events bigger than <<kafka-max_message_bytes,`max_message_bytes`>> will be
 
 ifdef::apm-server[]
 [float]
-=== Configure the {kib} output
+=== {kib} configuration
 
 include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
