--- a/docs/configure/outputs/redis.asciidoc
+++ b/docs/configure/outputs/redis.asciidoc
@@ -5,6 +5,12 @@
 <titleabbrev>Redis</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+The Redis output is not yet supported by {fleet}-managed APM Server.
+****
+
 The Redis output inserts the events into a Redis list or a Redis channel.
 This output plugin is compatible with
 the https://www.elastic.co/guide/en/logstash/current/plugins-inputs-redis.html[Redis input plugin] for {ls}.
@@ -26,7 +32,7 @@ output.redis:
 
 ifdef::apm-server[]
 [float]
-=== Configure the {kib} output
+=== {kib} configuration
 
 include::../../shared-kibana-endpoint.asciidoc[tag=shared-kibana-config]
 endif::[]
