--- a/docs/configure/tab-widgets/general-config.asciidoc
+++ b/docs/configure/tab-widgets/general-config.asciidoc
@@ -8,14 +8,12 @@ apm-server:
   rum:
     enabled: true
 
-output:
-  elasticsearch:
-    hosts: ElasticsearchAddress:9200
-
 max_procs: 4
 ----
 // end::binary[]
 
 // tag::fleet-managed[]
 include::../shared/input-apm.asciidoc[tag=fleet-managed-settings]
++
+. Look for these settings under **General**.
 // end::fleet-managed[]
