--- a/docs/legacy/copied-from-beats/docs/shared-docker.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/shared-docker.asciidoc
@@ -41,7 +41,7 @@ docker pull {dockerimage}
 ["source", "sh", subs="attributes"]
 ------------------------------------------------
 wget https://artifacts.elastic.co/cosign.pub
-cosign verify --key cosign.pub {docker-repo}:{version}
+cosign verify --key cosign.pub {dockerimage}:{version}
 ------------------------------------------------
 +
 For details about this step, refer to {ref}/docker.html#docker-verify-signature[Verify the {es} Docker image signature] in the {es} documentation.
