[docs] Add instructions for Docker image verification (#10882)
* [docs] Add instructions for Docker image verif

Co-authored-by: David Kilfoyle <david.kilfoyle@elastic.co>

* Update docs/legacy/copied-from-beats/docs/shared-docker.asciidoc

Co-authored-by: Maxime Gréau <maxime.greau@elastic.co>

---------

Co-authored-by: bmorelli25 <brandon.morelli@elastic.co>
Co-authored-by: Maxime Gréau <maxime.greau@elastic.co>
(cherry picked from commit 9230314f9329b2298aeeaea091c25708a2bd90b6)

--- a/docs/legacy/copied-from-beats/docs/shared-docker.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/shared-docker.asciidoc
@@ -18,7 +18,7 @@ Elastic license levels.
 ===== Pull the image
 
 Obtaining {beatname_uc} for Docker is as simple as issuing a +docker pull+ command
-against the Elastic Docker registry.
+against the Elastic Docker registry and then, optionally, verifying the image.
 
 ifeval::["{release-state}"=="unreleased"]
 
@@ -29,10 +29,22 @@ endif::[]
 
 ifeval::["{release-state}"!="unreleased"]
 
+. Pull the Docker image:
++
 ["source", "sh", subs="attributes"]
 ------------------------------------------------
 docker pull {dockerimage}
 ------------------------------------------------
+
+. Verify the Docker image:
++
+["source", "sh", subs="attributes"]
+------------------------------------------------
+wget https://artifacts.elastic.co/cosign.pub
+cosign verify --key cosign.pub {dockerimage}:{version}
+------------------------------------------------
++
+For details about this step, refer to {ref}/docker.html#docker-verify-signature[Verify the {es} Docker image signature] in the {es} documentation.
 
 endif::[]
 
